--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,8 @@
-# PyTorch with CUDA (adjust version to match your server's CUDA)
-torch==2.2.0+cu118
-torchvision==0.17.1+cu118
-torchaudio==2.2.0+cu118
--f https://download.pytorch.org/whl/torch_stable.html
-
-# Hugging Face libraries
-transformers==4.41.0
-diffusers==0.23.0
-huggingface-hub==1.28.0
-
-# TensorRT for PyTorch
-torch-tensorrt==2.8.0
-
-# Image processing
-Pillow==10.3.0
-
-# Optional: progress bars
-tqdm==4.66.1
+torch>=2.2.0
+diffusers>=0.36.0
+transformers>=4.35.0
+huggingface-hub>=0.17.0
+bitsandbytes>=0.41.0
+Pillow>=10.0.0
+accelerate
+torch_tensorrt
