--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ transformers>=4.35.0
 huggingface-hub>=0.17.0
 bitsandbytes>=0.41.0
 Pillow>=10.0.0
-# accelerate
+accelerate>=0.26.0
 # torch_tensorrt
